added patch method
